--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+     <div class="overley hide">
+        <div class="modal">
+            <h1>Modal</h1>
+            <button class="close">Close</button>
+         </div>
+     </div>
 
+
+    <script src="./script.js"></script>
+</body>
+</html>
