--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <h1>Reload the page</h1>
      <div class="overley hide">
         <div class="modal">
             <h1>Modal</h1>
